a bit use of Integer.valueOf to avoid new Integers
git-svn-id: https://scm.mmbase.org/mmbase/trunk@21724 91430c5f-d668-0410-9e7d-dd663366dcfd